--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,7 @@ body {
     font-family: 'Noto Sans Display', sans-serif;
     color: #383E50;
 }
+.popup-overlay {
+    background-color: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(10px);
+}
