--- a/src/components/TodoBlock.module.scss
+++ b/src/components/TodoBlock.module.scss
@@ -29,7 +29,7 @@
             margin-bottom: 10px;
             user-select: none;
         }
-        p {
+        span {
             font-weight: 300;
             font-size: 18px;
             user-select: none;
@@ -47,7 +47,6 @@
 .empty {
     display: block;
     font-size: 18px;
-    font-weight: 300;
     user-select: none;
 }
 
@@ -66,3 +65,5 @@ ul {
         }
     }
 }
+
+
