Styled editable header and subheader fields

--- a/src/components/InputForm.module.scss
+++ b/src/components/InputForm.module.scss
@@ -11,6 +11,7 @@
         background-color: #F5F6FA;
         padding: 15px;
         border-radius: 10px;
+        border: 1px solid #383E5010;
         box-shadow: 0px 0px 15px 0px rgba(13, 17, 23, 0.05);
         margin-right: 35px;
         font-size: 16px;
