--- a/src/components/EditableField.module.scss
+++ b/src/components/EditableField.module.scss
@@ -1,7 +1,6 @@
 .editableField {
     position: relative;
     display: flex;
-    
     input {
         background-color: transparent;
         font-size: inherit;
@@ -12,12 +11,19 @@
         padding: 0;
         margin: 0;
         outline: none;
-        border-bottom: 1px solid transparent;
+        border: 1px solid transparent;
         transition: .2s cubic-bezier(0, 0, .5, 1);
-        cursor: default;
+        cursor: pointer;
+        border-radius: 10px;
+        padding: 5px;
         &:focus {
-            border-bottom-color: #383E50;
+            border-color: #383E5010;
+            background-color: #F5F6FA;
+            box-shadow: 0px 0px 15px 0px rgba(13, 17, 23, 0.1);
+        }
+        &::placeholder {
+            color: #383E50;
+            opacity: .4;
         }
     }
-    
 }
